changed the architecture of the project, added saving in the model and registered the rabbit test variant

--- a/reminder/templates/home.html
+++ b/reminder/templates/home.html
@@ -18,6 +18,7 @@
                 <button type="submit" class="btn btn-primary">Найти</button>
                 <p> <a href="{% url 'add_mailing' %} ">Mailing.</a></p>
                 <p> <a href="{% url 'add_client' %} ">Client.</a></p>
+                <p> <a href="{% url 'add_company' %} ">About Company.</a></p>
             </form>
         </div>
     </div>
