changed data entry forms, added ckeditor

--- a/accounts/templates/accounts/add_birthday.html
+++ b/accounts/templates/accounts/add_birthday.html
@@ -9,7 +9,7 @@
     <div class="container px-4">
         <div class="row ">
             <div class="col-md-8 mx-auto">
-                <h4 class="my-2">Add new client</h4>
+                <h4 class="my-2">Новый Клиент</h4>
                 <form method="POST" action="">{% csrf_token %}
                     <div class="form-group">
                         {{ form.as_p }}
