--- a/reminder/templates/home.html
+++ b/reminder/templates/home.html
@@ -19,7 +19,7 @@
             </p>
 
 
-            <form method="GET" action="{% url 'clients_list' %}">
+            <form method="GET" action="{% url 'search' %}">
                 <div class="form-group">
                     {{ form.as_p }}
                 </div>
