--- a/accounts/templates/accounts/add_client.html
+++ b/accounts/templates/accounts/add_client.html
@@ -9,7 +9,7 @@
     <div class="container px-4">
         <div class="row ">
             <div class="col-md-8 mx-auto">
-                <h4 class="my-2">Форма для новых клиентов</h4>
+                <h4 class="my-2">Новый клиент</h4>
                 <form method="POST" action="">{% csrf_token %}
                     <div class="form-outline">
                         {{ form.as_p }}
