--- a/reminder/templates/add_holiday.html
+++ b/reminder/templates/add_holiday.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 
-{% block title %} Register {% endblock %}
+{% block title %} Праздники {% endblock %}
 
 
 {% block content %}
@@ -9,11 +9,11 @@
     <div class="container px-4">
         <div class="row ">
             <div class="col-md-8 mx-auto">
-                <h4 class="my-2">Добавление Праздника</h4>
-                <form method="POST" action="">{% csrf_token %}
+                <h4 class="my-2">Праздники</h4>
+                <form method="POST" enctype="multipart/form-data" action="">{% csrf_token %}
                     <div class="form-outline">
                         {{ form.as_p }}
-                        <br>
+                        {{ form.media }}
                     </div>
                     <button type="submit" class="btn btn-primary">Сохранить</button>
                 </form>
