full dockerfile and docker-compos

--- a/accounts/templates/accounts/add_client.html
+++ b/accounts/templates/accounts/add_client.html
@@ -15,7 +15,9 @@
                         {{ form.as_p }}
                         <br>
                     </div>
-                    <button type="submit" class="btn btn-primary">Сохранить</button>
+                    <div class="container-buttons">
+                        <button type="submit" class="btn btn-primary">Сохранить</button>
+                    </div>
                 </form>
             </div>
         </div>
