--- a/reminder/templates/clients_list.html
+++ b/reminder/templates/clients_list.html
@@ -16,15 +16,16 @@
     <div class="col-md-8 mx-auto">
         <div class="card my-3">
 
-            <h5 class="card-header"><a href="{% url 'update_client' obj.id %}">{{ obj.last_name}}
+            <h5 class="card-header"><a href="{% url 'update_client' obj.id %}"> {{ obj.last_name}}
                 {{ obj.first_name}} {{ obj.father_name }}</a></h5>
             <div class="card-body">
-                <p><strong>{{ obj.email }}</strong></p>
-                <p><strong>{{ obj.phone_number }}</strong></p>
-                <p><strong>{{ obj.date_of_birth }}</strong></p>
-                <p>{{obj.city }} | {{obj.address }}
-                <p>Загран: {{obj.inter_passport }} | Местный: {{obj.passport }}
-                <p>{{obj.traveled }}
+                <p><strong> Почта:</strong> {{ obj.email }}</p>
+                <p><strong>Номер телефона:</strong> {{ obj.phone_number }}</p>
+                <p><strong>Дата рождения:</strong> {{ obj.date_of_birth }}</p>
+                <p><strong>Город проживания | Адрес :</strong> {{obj.city }} | {{obj.address }}
+                <p><strong>Загранпаспорт :</strong> {{obj.inter_passport }} | <strong>Местный :</strong>:
+                    {{obj.passport }}
+                <p><strong>Места, где мы были:</strong> {{obj.traveled }}
                     <!---->
             </div>
         </div>
