added a limit on the number of photos and their size

--- a/reminder/templates/add_mailing.html
+++ b/reminder/templates/add_mailing.html
@@ -13,6 +13,7 @@
                     <div class="form-outline">
                         {{ form.as_p }}
                         {{ form.media }}<!--  Для вывода "Ckeditor"  -->
+                        {{ form.non_field_errors }}
                         <br>
                     </div>
                     <div class="container-buttons">
