--- a/accounts/templates/accounts/show_company_detail.html
+++ b/accounts/templates/accounts/show_company_detail.html
@@ -15,15 +15,14 @@
             <h5 class="card-header"><a href="{% url 'update_company_detail' obj.id %}">{{ obj.name }} </a>
             </h5>
             <div class="card-body">
-                <p><strong>{{ obj.address }}</strong></p>
-                <p><strong>{{ obj.phone_number }}</strong></p>
+                <p><strong>Адрес:</strong> {{ obj.address }}</p>
+                <p><strong>Номер телефона:</strong> {{ obj.phone_number }}</p>
                 {% autoescape off %}
-                <p>{{obj.message }}
-                    {% endautoescape %}
-                <p>{{obj.email }}
-                <p>{{obj.web_site }}
-                <p>{{obj.company_motto }}
-
+                <p><strong> Сообщение:</strong> {{ obj.message }}</p>
+                {% endautoescape %}
+                <p><strong> Почта:</strong> {{ obj.email }}</p>
+                <p><strong> Вебсайт Компании:</strong> {{ obj.web_site }}</p>
+                <p><strong> Девиз Компании:</strong> {{ obj.company_motto }}</p>
             </div>
         </div>
     </div>
