fixed text output on pages

--- a/accounts/templates/accounts/show_company_detail.html
+++ b/accounts/templates/accounts/show_company_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %} Job Finder {% endblock %}
+{% block title %} Список компаний {% endblock %}
 
 {% block content %}
 
