--- a/reminder/templates/show_holiday.html
+++ b/reminder/templates/show_holiday.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %} Holiday {% endblock %}
+{% block title %} Список праздников {% endblock %}
 
 {% block content %}
 <main role="main">
-    <h3 class="my-4 text-center">Список всех Праздников.</h3>
+    <h3 class="my-4 text-center">Список всех праздников.</h3>
 
     {% if object_list %}
     <div class="album py-5 bg-light">
