--- a/accounts/templates/accounts/add_client.html
+++ b/accounts/templates/accounts/add_client.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 
-{% block title %} Add Clients {% endblock %}
+{% block title %} Новый клиент {% endblock %}
 
 
 {% block content %}
