--- a/accounts/templates/accounts/company_detail.html
+++ b/accounts/templates/accounts/company_detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 
-{% block title %} Register {% endblock %}
+{% block title %} О Компании {% endblock %}
 
 
 {% block content %}
