--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %} Login {% endblock %}
+{% block title %} Авторизация {% endblock %}
 
 {% block content %}
 <div class="col-md-8 mx-auto my-5">
