--- a/accounts/templates/accounts/registration.html
+++ b/accounts/templates/accounts/registration.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %} Register {% endblock %}
+{% block title %} Регистрация {% endblock %}
 
 {% block content %}
 <div class="col-md-8 mx-auto my-2">
