--- a/reminder/templates/add_mailing.html
+++ b/reminder/templates/add_mailing.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 
-{% block title %} Register {% endblock %}
+{% block title %} Рассылка предложений {% endblock %}
 
 {% block content %}
 <div class="col-md-8 mx-auto my-2">
