--- a/reminder/templates/clients_list.html
+++ b/reminder/templates/clients_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %} Job Finder {% endblock %}
+{% block title %} Результаты{% endblock %}
 
 {% block content %}
 
