--- a/reminder/templates/home.html
+++ b/reminder/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %} Home {% endblock %}
+{% block title %} Домашняя страница {% endblock %}
 
 {% block content %}
 <div class="row">
