--- a/reminder/templates/show_mailing.html
+++ b/reminder/templates/show_mailing.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %} Mailing {% endblock %}
+{% block title %} Список предложений {% endblock %}
 
 {% block content %}
 <main role="main">
