update text in home.html and add file to gitignore

--- a/reminder/templates/home.html
+++ b/reminder/templates/home.html
@@ -12,11 +12,11 @@
     <div class="col-md-8 mx-auto my-2">
         <div class="container px-4">
             <p class="text-justify">
-                Каждый день мы анализируем сайты с вакансиями, согласно настройкам наших подписчиков.
-                Все подходящие вакансии, которые были опубликованы на этих сайтах за последние сутки,
-                записываются в базу данных и рассылаются подписчикам, согласно их предпочтений.
-                Вы можете просматривать актуальные вакансии, просто выбрав необходимый город или
-                специальность.
+                Наш уникальный сервис предоставляет возможность элегантно и оригинально поздравлять ваших
+                клиентов, а также эффективно распространять коммерческие предложения через популярную
+                платформу Telegram. Мы считаем, что важно придавать значимость каждому моменту общения с вашей
+                аудиторией, поэтому наша команда специалистов разработала уникальные и стильные шаблоны
+                поздравлений и привлекательные макеты коммерческих предложений.
             </p>
 
 
